[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ladder/ladder.gd" id="1"]

[node name="Ladder" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.04, 0.04, 0.05, 1)

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 4

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="Header" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="Margin/VBox/Header"]
layout_mode = 2
text = "LADDER GAUNTLET"

[node name="Spacer" type="Control" parent="Margin/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WinsLabel" type="Label" parent="Margin/VBox/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "Best: 0W"

[node name="ContentScroll" type="ScrollContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContentVBox" type="VBoxContainer" parent="Margin/VBox/ContentScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 3

[node name="OpponentPreview" type="PanelContainer" parent="Margin/VBox/ContentScroll/ContentVBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 56)

[node name="BtnRow" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 6

[node name="FightBtn" type="Button" parent="Margin/VBox/BtnRow"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(100, 20)
text = "Start Ladder Run"

[node name="BackBtn" type="Button" parent="Margin/VBox/BtnRow"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(70, 20)
text = "Back"
